--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "mpdf/mpdf": "8.0.13",
+        "niklasravnsborg/laravel-pdf": "^4.1",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-permission": "^5.5",
         "torann/geoip": "^3.0"
