--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,14 @@
         "php": "^8.1.17",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
-        "laravel/framework": "^9.11",
-        "laravel/sanctum": "^2.14.1",
+        "laravel/framework": "^10.0",
+        "laravel/sanctum": "^3.2",
         "laravel/scout": "^10.1",
         "laravel/tinker": "^2.7",
-        "mpdf/mpdf": "8.0.13",
-        "niklasravnsborg/laravel-pdf": "^4.1",
-        "realrashid/sweet-alert": "^5.1",
+        "realrashid/sweet-alert": "^7.1.0",
         "spatie/laravel-permission": "^5.5",
-        "torann/geoip": "^3.0"
+        "torann/geoip": "^3.0",
+        "yajra/laravel-datatables-oracle": "10.3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
@@ -24,10 +23,11 @@
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0",
+        "spatie/laravel-ignition": "^2.0"
     },
+
     "autoload": {
         "psr-4": {
             "App\\": "app/",
