--- a/composer.json
+++ b/composer.json
@@ -8,27 +8,26 @@
         "php": "^8.1.17",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
-        "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.2",
+        "laravel/framework": "^9.11",
+        "laravel/sanctum": "^2.14.1",
         "laravel/scout": "^10.1",
         "laravel/tinker": "^2.7",
-        "realrashid/sweet-alert": "^7.1.0",
+        "mpdf/mpdf": "8.0.13",
+        "niklasravnsborg/laravel-pdf": "^4.1",
+        "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-permission": "^5.5",
-        "torann/geoip": "^3.0",
-        "yajra/laravel-datatables-oracle": "10.3.1"
+        "torann/geoip": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
         "beyondcode/laravel-query-detector": "^1.7",
         "fakerphp/faker": "^1.9.1",
-        "laracraft-tech/laravel-schema-rules": "^1.3",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.0",
-        "spatie/laravel-ignition": "^2.0"
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.0"
     },
-
     "autoload": {
         "psr-4": {
             "App\\": "app/",
