--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "niklasravnsborg/laravel-pdf": "^4.1",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-permission": "^5.5",
-        "torann/geoip": "^3.0"
+        "torann/geoip": "^3.0",
+        "yajra/laravel-datatables": "9.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
