--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "barryvdh/laravel-debugbar": "^3.6",
         "beyondcode/laravel-query-detector": "^1.7",
         "fakerphp/faker": "^1.9.1",
+        "laracraft-tech/laravel-schema-rules": "^1.3",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
